# Trade_dex

./: .dockerignore  .gitignore  README.md  docker-compose.yml  test_ws.js
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs  state.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs
backend/src/models/: auth.rs  mod.rs  trade.rs
backend/src/routes/: auth.rs  mod.rs  trades.rs
backend/src/services/: clickhouse.rs  jupiter.rs  mod.rs  pair_mapping.rs  quicknode_ws.rs  solana.rs  trade_stream.rs
backend/src/utils/: jwt.rs  mod.rs
backend/src/websocket/: handler.rs  manager.rs  mod.rs
frontend/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  SETUP.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  LandingPage.tsx  PairSelector.tsx  PortfolioModal.tsx  PriceStats.tsx  TabsPanel.tsx  TradesModal.tsx  TradesTable.tsx  TradingChart.tsx  WalletButton.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: usePhantomAuth.ts
frontend/src/lib/: api.ts  ohlc.ts  transactionLogger.ts  websocket.ts
frontend/src/pages/: Index.tsx
