[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
ed25519-dalek = { version = "2.1", features = ["std"] }
bs58 = "0.5"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures-util = "0.3"
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
clickhouse = { version = "0.12.2", features = ["native-tls", "inserter", "time"] }
time = "0.3"